--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^2.22.1",
     "next": "10.2.0",
+    "next-auth": "^3.20.1",
+    "next-images": "^1.7.0",
+    "pg": "^8.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.14",
+    "prisma": "^2.22.1",
     "tailwindcss": "^2.1.2"
   }
 }
