--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "^2.22.1",
+    "classnames": "^2.2.6",
     "next": "10.2.0",
     "next-auth": "^3.20.1",
     "next-images": "^1.7.0",
