--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "@prisma/client": "^2.23.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "next": "10.2.0",
-    "next-auth": "^3.20.1",
+    "next-auth": "^3.23.3",
     "next-images": "^1.7.0",
     "pg": "^8.6.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-tiny-link": "^3.6.1",
+    "react-toastify": "^7.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
