--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "^2.23.0",
+    "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.2.6",
@@ -18,6 +19,7 @@
     "pg": "^8.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
     "react-tiny-link": "^3.6.1",
     "react-toastify": "^7.0.4"
   },
