--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@prisma/client": "^2.23.0",
     "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
+    "cloudinary": "^1.25.0",
+    "formidable": "^1.2.2",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.2.6",
     "next": "10.2.0",
