--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@prisma/client": "^2.23.0",
     "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
-    "cloudinary": "^1.25.0",
-    "formidable": "^1.2.2",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.2.6",
+    "cloudinary": "^1.25.0",
+    "dotenv-webpack": "^7.0.3",
+    "formidable": "^1.2.2",
     "next": "10.2.0",
     "next-auth": "^3.23.3",
     "next-images": "^1.7.0",
